--- a/_config.yml
+++ b/_config.yml
@@ -15,18 +15,18 @@
 
 # plum skin 활용하여 색상 설정함. 변경하려면 _sass/minimal-mistakes/skins/_plum.scss 에서 변경하거나
 # 해당 디렉토리 내의 다른 테마로 변경 가능 (minimal-mistakes 기본 제공 테마)
-minimal_mistakes_skin: "plum" # "default" "air", "aqua", ...
+minimal_mistakes_skin: 'plum' # "default" "air", "aqua", ...
 
 # Site Settings
-locale: "ko-KR" #"en-US"
-title: "Blog Name Here" # 상단 헤더에 보이는 블로그 명
-title_separator: "&#124;"
+locale: 'ko-KR' #"en-US"
+title: 'Dev velog' # 상단 헤더에 보이는 블로그 명
+title_separator: '&#124;'
 subtitle: # site tagline that appears below site title in masthead
-name: "your name here" # 블로그 닉네임 설정
-description: "this is my blog!" # 블로그 설명
-url: "https://github-account.github.io" # 블로그 URL
+name: 'maruduke' # 블로그 닉네임 설정
+description: 'this is my blog!' # 블로그 설명
+url: 'https://maruduke.github.io/' # 블로그 URL
 baseurl: # the subpath of your site, e.g. "/blog"
-repository: "github-account/github-account.github.io" # GitHub Repo 이름
+repository: 'https://github.com/maruduke' # GitHub Repo 이름
 teaser: #
 
 # logo                     : # 블로그명 앞에 로고 추가하고 싶을 경우 사용
@@ -34,39 +34,39 @@ masthead_title: # overrides the website title displayed in the masthead, use " "
 # breadcrumbs            : false # true, false (default)
 words_per_minute: 200
 comments:
-  provider: "utterances" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
-  disqus:
-    shortname: # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
-  discourse:
-    server: # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
-  facebook:
-    # https://developers.facebook.com/docs/plugins/comments
-    appid:
-    num_posts: # 5 (default)
-    colorscheme: # "light" (default), "dark"
-  utterances:
-    theme: "github-light" # "github-dark"
-    issue_term: "pathname"
-  staticman:
-    branch: # "master"
-    endpoint: # "https://{your Staticman v3 API}/v3/entry/github/"
+    provider: 'utterances' # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
+    disqus:
+        shortname: # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    discourse:
+        server: # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
+    facebook:
+        # https://developers.facebook.com/docs/plugins/comments
+        appid:
+        num_posts: # 5 (default)
+        colorscheme: # "light" (default), "dark"
+    utterances:
+        theme: 'github-light' # "github-dark"
+        issue_term: 'pathname'
+    staticman:
+        branch: # "master"
+        endpoint: # "https://{your Staticman v3 API}/v3/entry/github/"
 reCaptcha:
-  siteKey:
-  secret:
+    siteKey:
+    secret:
 atom_feed:
-  path: # blank (default) uses feed.xml
-  hide: # true, false (default)
+    path: # blank (default) uses feed.xml
+    hide: # true, false (default)
 search: # true, false (default)
 search_full_content: # true, false (default)
 search_provider: # google
 algolia:
-  application_id: # YOUR_APPLICATION_ID
-  index_name: # YOUR_INDEX_NAME
-  search_only_api_key: # YOUR_SEARCH_ONLY_API_KEY
-  powered_by: # true (default), false
+    application_id: # YOUR_APPLICATION_ID
+    index_name: # YOUR_INDEX_NAME
+    search_only_api_key: # YOUR_SEARCH_ONLY_API_KEY
+    powered_by: # true (default), false
 google:
-  search_engine_id: # YOUR_SEARCH_ENGINE_ID
-  instant_search: # false (default), true
+    search_engine_id: # YOUR_SEARCH_ENGINE_ID
+    instant_search: # false (default), true
 # SEO Related
 google_site_verification:
 bing_site_verification:
@@ -75,36 +75,36 @@ naver_site_verification:
 
 # Social Sharing
 twitter:
-  username:
+    username:
 facebook:
-  username:
-  app_id:
-  publisher:
+    username:
+    app_id:
+    publisher:
 og_image: # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
-  type: # Person or Organization (defaults to Person)
-  name: # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+    type: # Person or Organization (defaults to Person)
+    name: # If the user or organization name differs from the site's name
+    links: # An array of links to social media profiles
 
 # Analytics
 analytics:
-  provider: "google-gtag"
-  # false (default), "google", "google-universal", "google-gtag", "custom"
-  google:
-    tracking_id: "your tracking id here"
-    anonymize_ip: # true, false (default)
+    provider: 'google-gtag'
+    # false (default), "google", "google-universal", "google-gtag", "custom"
+    google:
+        tracking_id: 'your tracking id here'
+        anonymize_ip: # true, false (default)
 
 # Site Author
 author:
-  name: "your name here" # 블로그 닉네임
-  avatar: "/assets/images/meee.png" # 블로그 프로필 사진
-  #   bio              : "hi all!"
-  # location         : "Seoul, Korea"
-  # email            : "youremailhere@xxxxxx.com"
+    name: 'my velog' # 블로그 닉네임
+    avatar: '/assets/images/meee.png' # 블로그 프로필 사진
+    #   bio              : "hi all!"
+    # location         : "Seoul, Korea"
+    # email            : "youremailhere@xxxxxx.com"
 
-  links: # 사이트 링크
+    links: # 사이트 링크
 #     - label: "Email"
 #       icon: "fas fa-fw fa-envelope-square"
 #       # url: "mailto:your.name@email.com"
@@ -126,62 +126,62 @@ author:
 
 # Site Footer
 footer:
-  links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url:
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url:
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      # url:
-    - label: "GitLab"
-      icon: "fab fa-fw fa-gitlab"
-      # url:
-    - label: "Bitbucket"
-      icon: "fab fa-fw fa-bitbucket"
-      # url:
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url:
+    links:
+        - label: 'Twitter'
+          icon: 'fab fa-fw fa-twitter-square'
+          # url:
+        - label: 'Facebook'
+          icon: 'fab fa-fw fa-facebook-square'
+          # url:
+        - label: 'GitHub'
+          icon: 'fab fa-fw fa-github'
+          # url:
+        - label: 'GitLab'
+          icon: 'fab fa-fw fa-gitlab'
+          # url:
+        - label: 'Bitbucket'
+          icon: 'fab fa-fw fa-bitbucket'
+          # url:
+        - label: 'Instagram'
+          icon: 'fab fa-fw fa-instagram'
+          # url:
 
 # Reading Files
 include:
-  - .htaccess
-  - _pages
+    - .htaccess
+    - _pages
 exclude:
-  - "*.sublime-project"
-  - "*.sublime-workspace"
-  - vendor
-  - .asset-cache
-  - .bundle
-  - .jekyll-assets-cache
-  - .sass-cache
-  - assets/js/plugins
-  - assets/js/_main.js
-  - assets/js/vendor
-  - Capfile
-  - CHANGELOG
-  - config
-  - Gemfile
-  - Gruntfile.js
-  - gulpfile.js
-  - LICENSE
-  - log
-  - node_modules
-  - package.json
-  - package-lock.json
-  - Rakefile
-  - README
-  - tmp
-  - /docs # ignore Minimal Mistakes /docs
-  - /test # ignore Minimal Mistakes /test
+    - '*.sublime-project'
+    - '*.sublime-workspace'
+    - vendor
+    - .asset-cache
+    - .bundle
+    - .jekyll-assets-cache
+    - .sass-cache
+    - assets/js/plugins
+    - assets/js/_main.js
+    - assets/js/vendor
+    - Capfile
+    - CHANGELOG
+    - config
+    - Gemfile
+    - Gruntfile.js
+    - gulpfile.js
+    - LICENSE
+    - log
+    - node_modules
+    - package.json
+    - package-lock.json
+    - Rakefile
+    - README
+    - tmp
+    - /docs # ignore Minimal Mistakes /docs
+    - /test # ignore Minimal Mistakes /test
 keep_files:
-  - .git
-  - .svn
-encoding: "utf-8"
-markdown_ext: "markdown,mkdown,mkdn,mkd,md"
+    - .git
+    - .svn
+encoding: 'utf-8'
+markdown_ext: 'markdown,mkdown,mkdn,mkd,md'
 
 # Conversion
 markdown: kramdown
@@ -192,19 +192,19 @@ incremental: false
 
 # Markdown Processing
 kramdown:
-  input: GFM
-  hard_wrap: false
-  auto_ids: true
-  footnote_nr: 1
-  entity_output: as_char
-  toc_levels: 1..6
-  smart_quotes: lsquo,rsquo,ldquo,rdquo
-  enable_coderay: false
+    input: GFM
+    hard_wrap: false
+    auto_ids: true
+    footnote_nr: 1
+    entity_output: as_char
+    toc_levels: 1..6
+    smart_quotes: lsquo,rsquo,ldquo,rdquo
+    enable_coderay: false
 
 # Sass/SCSS
 sass:
-  sass_dir: _sass
-  style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
+    sass_dir: _sass
+    style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
 # Outputting
 permalink: /:categories/:title/
@@ -214,19 +214,19 @@ timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 # Plugins (previously gems:)
 plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  # - jekyll-feed
-  - jekyll-include-cache
+    - jekyll-paginate
+    - jekyll-sitemap
+    - jekyll-gist
+    # - jekyll-feed
+    - jekyll-include-cache
 
 # mimic GitHub Pages with --safe
 whitelist:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  # - jekyll-feed
-  - jekyll-include-cache
+    - jekyll-paginate
+    - jekyll-sitemap
+    - jekyll-gist
+    # - jekyll-feed
+    - jekyll-include-cache
 
 # Archives
 #  Type
@@ -241,8 +241,8 @@ whitelist:
 
 # category broken link : temporary commented out
 category_archive:
-  type: liquid
-  path: /categories/
+    type: liquid
+    path: /categories/
 # tag_archive:
 #   type: liquid
 #   path: /tags/
@@ -262,23 +262,23 @@ category_archive:
 # HTML Compression
 # - https://jch.penibelst.de/
 compress_html:
-  clippings: all
-  ignore:
-    envs: development
+    clippings: all
+    ignore:
+        envs: development
 
 # Defaults
 defaults:
-  # _posts
-  - scope:
-      path: ""
-      type: posts
-    values:
-      layout: single
-      author_profile: true
-      read_time: #true
-      show_date: true
-      comments: true
-      # share: true
-      related: true
-      sidebar:
-        nav: "categories"
+    # _posts
+    - scope:
+          path: ''
+          type: posts
+      values:
+          layout: single
+          author_profile: true
+          read_time: #true
+          show_date: true
+          comments: true
+          # share: true
+          related: true
+          sidebar:
+              nav: 'categories'
