--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: 'Dev velog' # 상단 헤더에 보이는 블로그 명
 title_separator: '&#124;'
 subtitle: # site tagline that appears below site title in masthead
 name: 'maruduke' # 블로그 닉네임 설정
-description: 'this is my blog!' # 블로그 설명
+description: 'this is Develope blog!' # 블로그 설명
 url: 'https://maruduke.github.io/' # 블로그 URL
 baseurl: # the subpath of your site, e.g. "/blog"
 repository: 'https://github.com/maruduke' # GitHub Repo 이름
