--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@ main:
 categories:
     - title: 'Spring'
       url: /categories/categories1/
-    - title: 'Categories2'
+    - title: 'Coding Test'
       url: /categories/categories2/
     - title: 'Categories3'
       url: /categories/categories3/
