--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,10 +19,7 @@ main:
 # 2022.02.15 sidebar update : simple ver.
 categories:
     - title: 'Spring'
-      url: /categories/Spring/
-    - title: 'Coding Test'
-      url: /categories/categories2/
-    - title: 'Categories3'
-      url: /categories/categories3/
-    - title: 'Categories4'
-      url: /categories/categories4/
+    children: 
+      - title: "socket.io"
+      url: /Spring/socket.io
+
