--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,10 @@ main:
 # 2022.02.15 sidebar update : simple ver.
 categories:
     - title: 'Spring'
-    children: 
-      - title: "socket.io"
-      url: /Spring/socket.io
-
+      url: /categories/Spring/
+    - title: 'Coding Test'
+      url: /categories/categories2/
+    - title: 'Categories3'
+      url: /categories/categories3/
+    - title: 'Categories4'
+      url: /categories/categories4/
