--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,25 +18,11 @@ main:
 # sidebar navigation (categories)
 # 2022.02.15 sidebar update : simple ver.
 categories:
-    - title: 'Title1'
-      children:
-          - title: 'Categories1'
-            url: /categories/categories1/
-          - title: 'Categories2'
-            url: /categories/categories2/
-          - title: 'Categories3'
-            url: /categories/categories3/
-          - title: 'Categories4'
-            url: /categories/categories4/
-
-    - title: 'Title2'
-      children:
-          - title: 'Categories5'
-            url: /categories/categories5/
-          - title: 'Categories6'
-            url: /categories/categories6/
-
-    - title: 'Title3'
-      children:
-          - title: 'Categories7'
-            url: /categories/categories7/
+    - title: 'Spring'
+      url: /categories/Spring/
+    - title: 'Categories2'
+      url: /categories/categories2/
+    - title: 'Categories3'
+      url: /categories/categories3/
+    - title: 'Categories4'
+      url: /categories/categories4/
