--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,10 +19,6 @@ main:
 # 2022.02.15 sidebar update : simple ver.
 categories:
     - title: 'Spring'
-      url: /categories/Spring/
-    - title: 'Categories2'
-      url: /categories/categories2/
-    - title: 'Categories3'
-      url: /categories/categories3/
-    - title: 'Categories4'
-      url: /categories/categories4/
+      children:
+          - title: 'netty-socket.io'
+            url: /categories/socket/
