update category websocket

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,3 +22,5 @@ categories:
       children:
           - title: 'spring-project'
             url: /categories/spring-project/
+          - title: 'WebSocket'
+            url: /categories/WebSocket/
