--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,3 +24,5 @@ categories:
             url: /categories/spring-project/
           - title: 'WebSocket'
             url: /categories/WebSocket/
+
+    - title: 'Kafka'
