--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,4 +28,4 @@ categories:
             url: /categories/MSA/
 
     - title: 'Kafka'
-      url: /categories/kafka/
+      url: /categories/Kafka/
