--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -35,4 +35,4 @@ categories:
             url: /categories/Flutter/
 
     - title: 'Kafka'
-      url: /categories/kafka/
+      url: /categories/Kafka/
