update netty3,4, navigation detail

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,6 +32,8 @@ categories:
     #       - title: 'Flutter'
     #         url: /categories/Flutter/
 
+    - title: '협업 툴'
+
     - title: 'Project'
       url: /categories/Project/
 
