--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,6 +18,10 @@ main:
 # sidebar navigation (categories)
 # 2022.02.15 sidebar update : simple ver.
 categories:
+    - title: 'Java'
+      children:
+          - title: 'TroubleShoot'
+            url: /categories/java/troubleShoot/
     - title: 'Spring'
       children:
           - title: 'WebSocket'
