NaverCloud index create

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -34,6 +34,9 @@ categories:
 
     - title: 'Collaboration Tools'
 
+    - title: 'Naver Cloud'
+      url: /categories/NaverCloud/
+
     - title: 'Project'
       url: /categories/Project/
 
