--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,6 +20,8 @@ main:
 categories:
     - title: 'Spring'
       children:
+          - title: 'basic'
+            url: /categories/spring_Basic/
           - title: 'WebSocket'
             url: /categories/WebSocket/
           - title: 'MSA'
