--- a/_config.yml
+++ b/_config.yml
@@ -218,6 +218,7 @@ plugins:
     - jekyll-sitemap
     - jekyll-gist
     # - jekyll-feed
+    - jekyll-seo-tag
     - jekyll-include-cache
 
 # mimic GitHub Pages with --safe
